Implement kafka consumer