@@ -1,30 +1,40 @@
 package com.awaydigitalteams.vnetsolutions.service;
 
-import com.awaydigitalteams.vnetsolutions.model.Sale;
-import com.awaydigitalteams.vnetsolutions.model.SaleProduct;
+import com.awaydigitalteams.vnetsolutions.dto.SaleDTO;
+import com.awaydigitalteams.vnetsolutions.dto.SaleProductDTO;
+import com.awaydigitalteams.vnetsolutions.entity.Sale;
+import com.awaydigitalteams.vnetsolutions.repository.SaleRepository;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SaleServicesImpl implements SaleServices {
 
+    private final SaleRepository saleRepository;
+
+    public SaleServicesImpl(SaleRepository saleRepository) {
+        this.saleRepository = saleRepository;
+    }
+
     @Override
-    public List<SaleProduct> getUnitsRevenueByProduct(List<Sale> sales) {
-        return sales.stream()
-                .collect(Collectors.groupingBy(Sale::getProductName))
-                .values()
+    public void save(List<SaleDTO> saleDTOS) {
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
+        List<Sale> sales = saleDTOS
                 .stream()
-                .map(saleList -> saleList
-                        .stream()
-                        .reduce((s1, s2) -> new Sale(null,
-                                null,
-                                s1.getProductName(),
-                                s1.getSalesUnits() + s2.getSalesUnits(),
-                                s1.getSalesRevenue().add(s2.getSalesRevenue())))
-                        .map(s1 -> new SaleProduct(s1.getProductName(), s1.getSalesUnits(), s1.getSalesRevenue()))
-                        .get())
-                .collect(Collectors.toList());
+                .map(s -> new Sale(LocalDate.parse(s.getSalesDate(), formatter),
+                        s.getStoreName(),
+                        s.getProductName(),
+                        s.getSalesUnits(),
+                        s.getSalesRevenue()))
+                .toList();
+        saleRepository.saveAll(sales);
+    }
+
+    @Override
+    public List<SaleProductDTO> getUnitsRevenueProduct() {
+        return saleRepository.getUnitsRevenueByProduct();
     }
 }
